# joint-search

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  documentation.md  opencode.json  protocol.md
agents/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agent_config.example.yaml  langgraph-main.py  main.py  pyproject.toml  research_agent.py  research_discussion.py  websearch.py
agents/src/agents/: __init__.py  api.py  list_agents.py  main.py  registry.py  research_request_completions.py  research_room.py  researcher.py
agents/src/agents/band/: __init__.py  client.py  registry.py
agents/src/agents/definitions/: __init__.py  medior.py  research_orchestrator.py  research_planner.py  researcher.py  test_tool_agent.py
agents/tests/: test_agent_specs.py  test_api.py  test_band_client.py  test_create_research_room.py  test_list_agents.py  test_main.py  test_registry.py  test_research_orchestrator_backend_tool.py  test_research_room.py  test_researcher_perplexity.py
backend/: .env.example  ormconfig.ts  package-lock.json  package.json
backend/src/: index.ts
backend/tests/: agentsClient.test.ts
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
plans/: implementation-notes.md
rag-worker/: Dockerfile  package-lock.json  package.json  tsconfig.json
rag-worker/src/: chunking.ts  db.ts  docling.ts  embeddings.ts  env.ts  index.ts  qdrant.ts  s3.ts
video/: script.md  voiceover.md
video/my-video/: README.md  (+4 more)
(+86 files in other folders)
